feat: Implement MongoDB connection utility, update Vite proxy target, and add SEO/social media meta tags with an OG image.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Okuyan okusun</title>
+    <meta name="description" content="A minimalist, two-person journaling app. Share your thoughts, music, and moments in a poetic timeline." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://okuyan-okusun.netlify.app/" />
+    <meta property="og:title" content="Okuyan okusun" />
+    <meta property="og:description" content="A minimalist, two-person journaling app. Share your thoughts, music, and moments in a poetic timeline." />
+    <meta property="og:image" content="/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://okuyan-okusun.netlify.app/" />
+    <meta property="twitter:title" content="Okuyan okusun" />
+    <meta property="twitter:description" content="A minimalist, two-person journaling app. Share your thoughts, music, and moments in a poetic timeline." />
+    <meta property="twitter:image" content="/og-image.jpg" />
+
     <!-- Adding Google Fonts explicitly since next/font is removed -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
