Feat: Add favicon and new meta tag img

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="https://okuyanokusun-production.up.railway.app/uploads/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="https://okuyanokusun-production.up.railway.app/uploads/favicon.svg" />
+    <link rel="shortcut icon" href="https://okuyanokusun-production.up.railway.app/uploads/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://okuyanokusun-production.up.railway.app/uploads/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="OkuyanOkusun" />
+    <link rel="manifest" href="https://okuyanokusun-production.up.railway.app/uploads/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Okuyan okusun</title>
     <meta name="description" content="A minimalist, two-person journaling app. Share your thoughts, music, and moments in a poetic timeline." />
@@ -12,14 +17,14 @@
     <meta property="og:url" content="https://okuyan-okusun.netlify.app/" />
     <meta property="og:title" content="Okuyan okusun" />
     <meta property="og:description" content="A minimalist, two-person journaling app. Share your thoughts, music, and moments in a poetic timeline." />
-    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:image" content="/favicon-light.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://okuyan-okusun.netlify.app/" />
     <meta property="twitter:title" content="Okuyan okusun" />
     <meta property="twitter:description" content="A minimalist, two-person journaling app. Share your thoughts, music, and moments in a poetic timeline." />
-    <meta property="twitter:image" content="/og-image.jpg" />
+    <meta property="twitter:image" content="/favicon-light.jpg" />
 
     <!-- Adding Google Fonts explicitly since next/font is removed -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
